--- a/docs/theory/readme.tex
+++ b/docs/theory/readme.tex
@@ -2,7 +2,7 @@
 \documentclass[times,namecite]{goose-article}
 
 \title{%
-  ElastoPlasticQPot -- An implementation for an elasto-plastic continuum model based on a manifold of quadratic potentials
+  GMatElastoPlasticQPot -- An implementation for an elasto-plastic continuum model based on a manifold of quadratic potentials
 }
 
 \author{T.W.J.~de~Geus}
@@ -13,13 +13,13 @@
   \hspace{1mm}--\hspace{1mm} %
   \href{http://www.geus.me}{www.geus.me}%
   \hspace{1mm}--\hspace{1mm} %
-  \href{https://github.com/tdegeus/ElastoPlasticQPot}{https://github.com/tdegeus/ElastoPlasticQPot}%
+  \href{https://github.com/tdegeus/GMatElastoPlasticQPot}{https://github.com/tdegeus/GMatElastoPlasticQPot}%
 }
 
 \hypersetup{pdfauthor={T.W.J. de Geus}}
 
 \header{%
-  \href{https://github.com/tdegeus/ElastoPlasticQPot}{ElastoPlasticQPot} -- \href{http://www.geus.me}{T.W.J.\ de Geus}%
+  \href{https://github.com/tdegeus/GMatElastoPlasticQPot}{GMatElastoPlasticQPot} -- \href{http://www.geus.me}{T.W.J.\ de Geus}%
 }
 
 \newcommand\leftstar[1]{\hspace*{-.3em}~^\star\!#1}
