[docs] Initialized readme (fixes #9)

--- a/docs/readme.tex
+++ b/docs/readme.tex
@@ -33,10 +33,11 @@
 \maketitle
 
 \begin{abstract}
-A microscopic continuum model of plasticity in amorphous solids is proposed. This model uses a strain energy with multiple minima to capture the effect of plasticity. This model is inspired on the work of \citet{Jagla2017}.
-\end{abstract}
+\noindent
+A microscopic continuum model of plasticity in amorphous solids is proposed. This model uses a strain energy with multiple minima to capture the effect of plasticity. This model was used for the first time in \citet{DeGeus2018} and was partly inspired on the work of \citet{Jagla2017}.
 
 \keywords{elasto-plasticity; linear elasticity}
+\end{abstract}
 
 \setcounter{tocdepth}{3}
 \tableofcontents
